src/test/ui/rfc-2008-non-exhaustive/uninhabited/coercions_same_crate.stderr
error[E0308]: mismatched types
  --> $DIR/coercions_same_crate.rs:28:5
   |
LL | fn cannot_coerce_empty_enum_to_anything(x: UninhabitedEnum) -> A {
   |                                                                - expected `A` because of return type
LL |     x
   |     ^ expected struct `A`, found enum `UninhabitedEnum`

error[E0308]: mismatched types
  --> $DIR/coercions_same_crate.rs:32:5
   |
LL | fn cannot_coerce_empty_tuple_struct_to_anything(x: UninhabitedTupleStruct) -> A {
   |                                                                               - expected `A` because of return type
LL |     x
   |     ^ expected struct `A`, found struct `UninhabitedTupleStruct`

error[E0308]: mismatched types
  --> $DIR/coercions_same_crate.rs:36:5
   |
LL | fn cannot_coerce_empty_struct_to_anything(x: UninhabitedStruct) -> A {
   |                                                                    - expected `A` because of return type
LL |     x
   |     ^ expected struct `A`, found struct `UninhabitedStruct`

error[E0308]: mismatched types
  --> $DIR/coercions_same_crate.rs:40:5
   |
LL | fn cannot_coerce_enum_with_empty_variants_to_anything(x: UninhabitedVariants) -> A {
   |                                                                                  - expected `A` because of return type
LL |     x
   |     ^ expected struct `A`, found enum `UninhabitedVariants`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
